# libbluetooth-rs

./: .gitmodules  Cargo.toml
examples/: ble-scan.rs  local-name.rs  mio-play.rs
examples-old/: ble-scan.rs  local-name.rs
src/: common.rs  hci.rs  lib.rs  raw.rs  sundry.rs  types.rs
src/hci/: command.rs  consts.rs  event.rs  mod.rs  opcode.rs  packet.rs  types.rs
src/hci/command/: controller.rs  informational.rs  le_controller.rs  mod.rs
src/raw/: hci.rs  mod.rs
tests/: test_hci_linux_init.rs
