[package]

name = "bluetooth"
version = "0.0.1"
authors = ["Scott Talbot <s@chikachow.org>"]


[dependencies]
byteorder = "^0.3"
rustc-serialize = "^0.3"

[dependencies.bytes]
git = "https://github.com/carllerche/bytes"
#
#[dependencies.mio]
#git = "https://github.com/carllerche/mio"
#
#[dependencies.nix]
##git = "https://github.com/carllerche/nix-rust"
#path = "lib/nix-rust"
